import 'package:navigation/navigation.dart';

import 'translation_history.gm.dart';

export 'package:translation_history/translation_history.dart';
export 'src/presentation/pages/translation_history_page.dart';

@AutoRouterConfig.module()
class TranslationHistoryModule extends $TranslationHistoryModule {}